nginx/ingress.yaml
# Ab K8s 1.19
apiVersion: networking.k8s.io/v1
kind:       Ingress
metadata:
  name: nginx
  namespace: nginx
spec:
  rules:
  - host: arthurhobspice.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: nginx
            port:
              number: 80
